--- a/views/form.pug
+++ b/views/form.pug
@@ -13,3 +13,6 @@ html(lang="en")
         button(type="submit") CALUCULATE
     h2 RESULT
     p #{tweet}
+    a(href="/") RESET
+    a(href="/auth/twitter") Twttter認証
+    a(href="/tweet") Tweet!!
