--- a/views/form.pug
+++ b/views/form.pug
@@ -14,5 +14,5 @@ html(lang="en")
     h2 RESULT
     p #{tweet}
     a(href="/") RESET
-    a(href="/auth/twitter") Twttter認証
+    a(href="/signin") Twttter認証
     a(href="/tweet") Tweet!!
