イテレーション機能の実装とセッション管理による受け渡しの実装

--- a/views/form.pug
+++ b/views/form.pug
@@ -12,7 +12,6 @@ html(lang="en")
       div
         button(type="submit") CALUCULATE
     h2 RESULT
-    p #{tweet}
-    a(href="/") RESET
-    a(href="/signin") Twttter認証
-    a(href="/tweet") Tweet!!
+    ul 
+      each val in tweet
+        li #{val}
