試験的な読み取り機能の実装

--- a/views/addData.pug
+++ b/views/addData.pug
@@ -6,7 +6,8 @@ html(lang="en")
   body
     h1 DATA SETTINGS
     h2 Enter more data
-    form(method="post" action="/addData") 大会名
+    form(method="post" action="/addData") 全て入力　
+      br
       input(type="number" name="nameOfMeet") 
       |競技会番号
       br
