--- a/views/form.pug
+++ b/views/form.pug
@@ -11,3 +11,4 @@ html(lang="en")
         textarea(id=content name="content" cols=40 rows=4)
       div
         button(type="submit") CALUCULATE
+    a(href="/record/row") Record Page
