--- a/views/result.pug
+++ b/views/result.pug
@@ -11,4 +11,4 @@ html(lang="en")
         li #{val}
     a(href="/") RESET
     br
-    a(href="http:/addData") ADD DATA
+    a(href="/addData") ADD DATA
