--- a/views/confirm.pug
+++ b/views/confirm.pug
@@ -14,12 +14,12 @@ html(lang="en")
     ul 
       each val in tweet
         li #{val}
-    a(href="http:/") TIME IMPUT PAGE
+    a(href="/") TIME IMPUT PAGE
     br
-    a(href="http:/addData") DATA IMPUT PAGE
+    a(href="/addData") DATA IMPUT PAGE
     br
-    a(href="http:/tweet") Tweet
+    a(href="/tweet") Tweet
     br
-    a(href="http:/afterAdd") ADD TO DATABESE
+    a(href="/afterAdd") ADD TO DATABESE
     
 
